--- a/index.html
+++ b/index.html
@@ -6,52 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
+    
 </head>
 <body>
-    <div class="main">
-        <div id="container">
-
-            <div id="display">
-                
-                3</div>
-
-                <div id="buttons">
-                    <div class="riga" id="riga1">
-                    <div> <button id="delete">DEL</button></div>
-                    <div> <button class="operation" id="multiplication">*</button></div>
-                    <div> <button class="operation" id="division">/</button></div>
-                    <div> <button id="backspace"><=</button></div>
-                    </div>
-
-                    <div class="riga" id="riga2">
-                        <div><button class="number" id="7">7</button></div>
-                        <div><button class="number" id="8">8</button></div>
-                        <div><button class="number" id="9">9</button></div>
-                        <div><button class="operation" id="subtraction">-</button></div>
-                    </div>
-
-                    <div class="riga" id="riga3">
-                        <div><button class="number" id="4">4</button></div>
-                        <div><button class="number" id="5">5</button></div>
-                        <div><button class="number" id="6">6</button></div>
-                        <div><button class="operation" id="addition">+</button></div>
-                    </div>
-
-
-                    <div class="riga" id="riga4">
-                        <div><button class="number" id="1">1</button></div>
-                        <div><button class="number" id="2">2</button></div>
-                        <div><button class="number" id="3">3</button></div>
-                        <div><button class="operation" id="equal">=</button></div>
-                    </div>
-
-                    <div class="riga" id="riga5">
-                        <button class="number" id="zero">0</button>
-                        <button  id="virgola">,</button>
-                    </div>
-                </div>
-        </div>
+    <h1>Calculator</h1>
+<div class="calculator">
+    <div class="row">
+        <div class="display" id="firstOperandDisplay"></div>
+        <div class="display" id="display">0</div>
     </div>
+    <div class="row">
+        <button class="service" id="clear">CLEAR</button>
+        <button class="service" id="del">ᗕ</button>
+    </div>
+
+    <div class="row">
+        <button class="number" id="seven">7</button>
+        <button class="number" id="eight">8</button>
+        <button class="number" id="nine">9</button>
+        <button class="operation" id="division">÷</button>
+    </div>
+
+    <div class="row">
+        <button class="number" id="four">4</button>
+        <button class="number" id="five">5</button>
+        <button class="number" id="six">6</button>
+        <button class="operation" id="multiplication">x</button>
+    </div>
+
+    <div class="row">
+        <button class="number" id="one">1</button>
+        <button class="number" id="two">2</button>
+        <button class="number" id="three">3</button>
+        <button class="operation" id="minus">-</button>
+    </div>
+
+    <div class="row">
+        <button class="" id="point">.</button>
+        <button class="number" id="zero">0</button>
+        <button class="service" id="equals">=</button>
+        <button class="operation" id="plus">+</button>
+    </div>
+</div>
+
+<div>
+    <footer>By Daniele Paladini</footer>
+</div>
 </body>
 </html>
